8262017: C2: assert(n != __null) failed: Bad immediate dominator info.